--- a/index.html
+++ b/index.html
@@ -4,56 +4,67 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Студія</title>
   </head>
   <body>
     <header class="header">
-      <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+      <nav class="navigation">
+        <a href="/" class="web"><span class="webt">Web</span>Studio</a>
+        <ul class="headerlist">
+          <li><a href="./index.html" class="studio">Студія</a></li>
+          <li><a href="./portfolio.html" class="port">Портфоліо</a></li>
+          <li><a href="" class="cont">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="info">
+        <li>
+          <a href="mailto:info@devstudio.com" class="mail"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
-    <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+    <main class="main">
+      <section class="main-info">
+        <h1 class="view">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="main-btn">Замовити послугу</button>
       </section>
 
-      <section>
-        <h2>Наші переваги</h2>
-        <ul>
-          <li>
-            <h3>Увага до деталей</h3>
-            <p>
+      <section class="benefits">
+        <h2 class="our-benefits">Наші переваги</h2>
+        <ul class="benefit-list">
+          <li class="benefits-sum">
+            <h3 class="benefits-title">Увага до деталей</h3>
+            <p class="benefits-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li>
-            <h3>Пунктуальність</h3>
-            <p>
+          <li class="benefits-sum">
+            <h3 class="benefits-title">Пунктуальність</h3>
+            <p class="benefits-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li>
-            <h3>Планування</h3>
-            <p>
+          <li class="benefits-sum">
+            <h3 class="benefits-title">Планування</h3>
+            <p class="benefits-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
-            <h3>Сучасні технології</h3>
-            <p>
+          <li class="benefits-sum">
+            <h3 class="benefits-title">Сучасні технології</h3>
+            <p class="benefits-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -61,10 +72,10 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
+      <section class="images">
+        <h2 class="images-title">Чим ми займаємося</h2>
+        <ul class="images-list">
+          <li class="images-text">
             <img
               src="./images/box1.jpg"
               alt="процес кодування"
@@ -72,7 +83,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="images-text">
             <img
               src="./images/box2.jpg"
               alt="аналітика"
@@ -80,7 +91,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="images-text">
             <img
               src="./images/box3.jpg"
               alt="графіка"
@@ -91,66 +102,73 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="person-team">Наша команда</h2>
+        <ul class="person-list">
+          <li class="person-text">
             <img
               src="./images/img1.jpg"
               alt="картка 1"
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="names">Ігор Дем'яненко</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="person-text">
             <img
               src="./images/img2.jpg"
               alt="картка 2"
               width="270"
               height="260"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="names">Ольга Рєпіна</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="person-text">
             <img
               src="./images/img3.jpg"
               alt="картка 3"
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="names">Микола Тарасов</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="person-text">
             <img
               src="./images/img4.jpg"
               alt="картка 4"
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="names">Михайло Єрмаков</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="">WebStudio</a>
-      <address>
-        <ul>
-          <li>
+    <footer class="footer">
+      <a href="" class="footer-web"><span class="webt">Web</span>Studio</a>
+      <address class="footer-address">
+        <ul class="footer-nav">
+          <li class="footer-text">
             <a
               href="https://goo.gl/maps/LbcGju75ScbFFyYE7"
               target="_blank"
               rel="noferrer noopenner nofollow"
+              class="footer-text"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="footer-mail"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
