виправлено помилки, враховано в роботі

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <title>Студія</title>
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <nav class="navigation">
         <a href="/" class="web"><span class="webt">Web</span>Studio</a>
