--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Портфоліо</title>
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <nav class="navigation">
         <a href="/" class="web"><span class="webt">Web</span>Studio</a>
