--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="navigation">
         <a href="/" class="web"><span class="webt">Web</span>Studio</a>
         <ul class="headerlist">
-          <li><a href="./index.html" class="studio">Студія</a></li>
+          <li><a href="./index.html" class="studio current">Студія</a></li>
           <li><a href="./portfolio.html" class="port">Портфоліо</a></li>
           <li><a href="" class="cont">Контакти</a></li>
         </ul>
