--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <a href="/" class="web"><span class="webt">Web</span>Studio</a>
         <ul class="headerlist">
           <li><a href="./index.html" class="studio">Студія</a></li>
-          <li><a href="" class="port">Портфоліо</a></li>
+          <li><a href="" class="port current">Портфоліо</a></li>
           <li><a href="" class="cont">Контакти</a></li>
         </ul>
       </nav>
